--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "electron-konva-demo-1",
   "version": "1.0.0",
   "description": "",
-  "main": "main",
+  "main": "main.js",
   "scripts": {
     "start": "electron .",
     "watch": "webpack --config webpack.common.js --watch"
